\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 2.2.10}{
  \itemize{
     \item{Fix erroneous warning when checking blocking factors}
   }
}


\section{Version 2.2.9}{
  \itemize{
     \item{Fix bug in 3D PCA plots (y-x axis reversal)}
   }
}


\section{Version 2.2.8}{
  \itemize{
     \item{Fix bug in re-centering code to honor mapping quality filter}
   }
}



\section{Version 2.2.7}{
  \itemize{
     \item{Fix calculation of summits to actually use weighted means. 
     Same fix adresses issue when calculating summits using user-supplied consensus peakset.}
   }
}


\section{Version 2.2.5}{

  \itemize{
     \item{Fix bug using bFlip option with method=DBA_EDGER}
   }
}

\section{Version 2.2.3}{

  \itemize{
     \item{Fix bug in dba.count}
     \item{Update tamoxifen.csv and peak files to match downloadable dataset}
   }
}

\section{Version 2.2.0}{

Changes since least release include bug fixes and some new features:

  \itemize{
     \item{Feature: Control which principal components are plotted using components parameter in dba.plotPCA}
     \item{Feature: Control axis range using xrange and yrange parameters in dba.plotMA}
     \item{Feature: Filtering per-contrast using filter and filterFun parameters in dba.analyze)}
     \item{Feature: Flip which group in contrast shows gain/loss (sign of fold change) using bFlip parameter in dba.report}
     \item{Feature: Flip which group in contrast shows gain/loss (sign of fold change) using bFlip parameter in dba.plotMA}
   }
}

\section{Version 2.0.0}{
  DiffBind has had substantial internal changes since the last release. 
  These are focused on improving memory efficiency for large experiments. 
  \itemize{
     \item{Feature changes} 
        \itemize{
           \item{Change default analysis method to DESeq2 for its more conservative normalization}
           \item{Designate DESeq method as obsolete (in favor of DESeq2); alter documentation and vignette accordingly.}