@@ -1,6 +1,6 @@
 Package: DiffBind
 Type: Package
-Version: 2.2.10
+Version: 2.2.11
 Title: Differential Binding Analysis of ChIP-Seq peak data
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gord Brown
         <gdbzork@gmail.com>
