@@ -11,7 +11,6 @@
 ## dba.overlap	    Compute binding site overlaps
 ## dba.count  	    Count reads in binding sites
 
-## dba.contrast	    Establish contrast(s) for analysis
 ## dba.analyze  	Execute affinity analysis
 ## dba.report	    Generate report for a contrast analysis
 
@@ -1179,6 +1178,7 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
          minOverlap <- res$minOverlap
       }
       contrasts <- res$contrasts
+      called    <- res$called
       for(i in 1:length(res$peaks)) {
          if(is.factor(res$peaks[[i]][,1])) {
             res$peaks[[i]][,1] <- as.character(res$peaks[[i]][,1])
@@ -1187,6 +1187,7 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
       res <- pv.vectors(res,minOverlap=minOverlap,bAllSame=pv.allSame(res),
                         merge=is.null(res$merged))
       res$contrasts <- contrasts
+      res$called    <- called
    }
    
    if(is.null(res$config$DataType)) {
