@@ -2,6 +2,12 @@
 \title{DiffBind News}
 \encoding{UTF-8}
 
+\section{Version 2.2.11}{
+  \itemize{
+     \item{Correctly restore called sites in dba.load}
+   }
+}
+
 \section{Version 2.2.10}{
   \itemize{
      \item{Fix erroneous warning when checking blocking factors}
